--- a/wish.html
+++ b/wish.html
@@ -5,40 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Prish!!!!</title>
     <style>
-        body {
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .message {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 90%;
-            box-sizing: border-box;
-        }
-        @media (min-width: 768px) {
-            .message {
-                max-width: 50%;
-                align-items: start;
-            }
-        }
         p {
             text-align: justify;
+            margin-bottom: 20px; /* Space between paragraphs */
+            line-height: 1.6; /* Improve readability */
+            position: relative;
+        }
+        h1 {
+            text-align: center;
+            margin: 20px 0; /* Space above and below the heading */
+            position: relative;
+        }
+
+        h2 {
+            text-align: left;
+            margin: 20px 0; /* Space above and below the heading */ 
+            position: relative;
+        }
+        img{
+            position: relative;
         }
     </style>
 </head>
 <body>
-    <div class="message">
         <h1>Happy Birthday Prish!!!!</h1>
+        <p> Happy Birthday Prish (Itni mehnat kar li tere liye maine lmao). Now people have written poems for you but kisi ne aaj tak tere liye poori website 
+            banayi hai?😼 No right?😼 Dekh kitna acha hoon mai dekhhh and roz ladhti rehti hai merse tu huh🙄. But anyway jokes apart, HAPPIEST 22ND BIRTHDAY
+            CUTIE <3. if I try to put it into words ki how much you mean to me I'll prolly go on for days but let's face it, my "comprehension skills are bad" 
+            and you already know your importance in my life (it’s even bigger than how big your ass is)</p>
+        <p>Now since ab itni badi website bana hi di hai, let me highlight some of the best moments of our friendship.</p>
+        <h2>First Photo</h2>
+        <img src="D:\Prish Birthday\first photo.jpg" width="20%">
         <p>
-    </p>
-    </div>
+            I think this is prolly the first photo we ever took and it was our first outing ig after we met at sanat’s house. I fuckin love this photo and I 
+            very clearly remember that this photo was ham dono ki whatsapp dp for some time😭. It’s lit so cute. Maybe cuz our faces ain’t fully visible 💀.
+        </p>
+        <h2>Rii’s 15th Birthday</h2>
+        <img src="D:\Prish Birthday\rii 15th birthday.jpg" width="20%">
+        <p>
+            How can I ever forget this birthday cuz this is where it all started💀💀💀💀💀(ykwim). This was the first time I came to your house and is birthday 
+            ke baad hamara group bana tha where Roshit used to flirt with you and then I also started flirting 😭😭 but it was indeed a memorable day ngl.
+        </p>
+                        
 </body>
 </html>
