--- a/wish.html
+++ b/wish.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Prish!!!!</title>
     <style>
+        body{
+            background-color: #020e1d;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color: white;
+        }
         p {
             text-align: justify;
             margin-bottom: 20px; /* Space between paragraphs */
             line-height: 1.6; /* Improve readability */
             position: relative;
+            margin-left: 15px;
         }
         h1 {
             text-align: center;
@@ -24,6 +30,7 @@
         }
         img{
             position: relative;
+            margin-left: 750px;
         }
     </style>
 </head>
