--- a/wish.html
+++ b/wish.html
@@ -16,6 +16,7 @@
             line-height: 1.6; /* Improve readability */
             position: relative;
             margin-left: 15px;
+            margin-right: 15px;
         }
         h1 {
             text-align: center;
