--- a/wish.html
+++ b/wish.html
@@ -31,7 +31,7 @@
         }
         img{
             position: relative;
-            margin-left: 100px;
+            margin-left: 150px;
         }
     </style>
 </head>
@@ -43,17 +43,89 @@
             and you already know your importance in my life (it’s even bigger than how big your ass is)</p>
         <p>Now since ab itni badi website bana hi di hai, let me highlight some of the best moments of our friendship.</p>
         <h2>First Photo</h2>
-        <img src="D:\Prish Birthday\first photo.jpg" width="20%">
+        <img src="first photo.jpg" width="20%">
         <p>
             I think this is prolly the first photo we ever took and it was our first outing ig after we met at sanat’s house. I fuckin love this photo and I 
             very clearly remember that this photo was ham dono ki whatsapp dp for some time😭. It’s lit so cute. Maybe cuz our faces ain’t fully visible 💀.
         </p>
         <h2>Rii’s 15th Birthday</h2>
-        <img src="D:\Prish Birthday\rii 15th birthday.jpg" width="20%">
+        <img src="rii 15th birthday.jpg" width="20%">
         <p>
             How can I ever forget this birthday cuz this is where it all started💀💀💀💀💀(ykwim). This was the first time I came to your house and is birthday 
             ke baad hamara group bana tha where Roshit used to flirt with you and then I also started flirting 😭😭 but it was indeed a memorable day ngl.
         </p>
-                        
+        <h2>Your 19th Birthday</h2>
+        <img src="prish 19th birthday.jpg" width="20%">
+        <p>
+            I still clearly remember the planning I did for your birthday. Mumma ke through maine apne kapde Sanat ke ghar bhijvaaye, bunked last 2 periods of 
+            college and AND AND how you stopped talking to everyone on 6th October and we were seriously contemplating if we should come surprise you or not💀
+        </p>
+        <h2>Santa and Saras’ Birthday</h2>
+        <img src="D:\Prish Birthday\first nightstay aka sanat saras' birthday.jpg" width="20%">
+        <p>
+            I fuckin love this photo. This photo lit has my heart. Ofc we can’t forget sanat and saras’ birthday because that was the first nightstay we did 
+            and Santa twerked for us😭😭😭😭😭 but most importantly, we became best friends us time and November 2021 was the best month of 2021 for me cuz 
+            we both got close us month mei.
+        </p>
+        <h2>Uncle’s 50th Birthday</h2>
+        <img src="uncle's 50th birthday.jpg" width="20%">
+        <p>
+            How can I ever forget this birthday cuz this is where it all started💀💀💀💀💀(ykwim). This was the first time I came to your house and is birthday 
+            ke baad hamara group bana tha where Roshit used to flirt with you and then I also started flirting 😭😭 but it was indeed a memorable day ngl.
+        </p>
+        <h2>Roshu’s 16th birthday</h2>
+        <img src="roshu's birthday.jpg" width="20%">
+        <p>
+            This birthday was also cute cuz we got so many good photos is birthday pr
+        </p>
+        <h2>My 19th Birthday</h2>
+        <img src="my 19th birthday.jpg" width="20%">
+        <p>
+            My 19th birthday was so far my best birthday because that day was just 🤌🏻🤌🏻🤌🏻🤌🏻. I remember that we went to MKT and I made y’all wait for 2 hours 
+            just so we all could eat at AMA but I think the wait was def worth it cuz you LOVED vaha ke chicken fries and then we went to mere ghar and I think 
+            that was the first time you cane to my house. 
+        </p>
+        <h2>NYE 2022</h2>
+        <img src="NYE 2022.jpg" width="20%">
+        <p>
+            This was by far the ‘best nightstay’ according to you and I couldn’t agree more (even tho sanat saras’ birthday vaala nightstay is the best one for me) 
+            but yes, we had A LOT of fun and I remember I was sad is stay pr cuz I had a fight with my friends but my mood eventually got better with ‘you’ guys
+        </p>
+        <h2>NYE 2023</h2>
+        <img src="NYE 2023.jpg" width="20%">
+        <p>
+            Again this stay is special because we sneaked uncle logo ki daaru and got drunk😭😭😭 and I remember how we all played UNO at night and had 
+            bohot zyada fun.
+        </p>
+        <h2>The CP outing💀</h2>
+        <img src="CP Outing.jpg" width="20%">
+        <p>
+            Yeah you clearly know which one I am referring to💀 this outing was definitely something. But jokes apart, I genuinely miss that day because it 
+            was actually fun and would actually want to go back and live this day again
+        </p>
+        <h2>SHREYA GHOSHALLL</h2>
+        <img src="shreya ghoshal concert.jpg" width="20%">
+        <p>
+            I absolutely love this photo, it’s so cute😭. This concert was def something and I remember how we all went bonkers when she sang Chikni Chameli
+        </p>
+        <h2>17th March, 2024 - The ‘non-date date’</h2>
+        <img src="17th March.jpg" width="20%">
+        <p>
+            Yeah idc what you think but this was a date. But jokes aside, I still remember this day because it was so cute?? Riyaana asked if she could come 
+            with us and you stricly said NO😭😭😭. It was a perfect day from every possible way and I would love to go in past and live this day again.
+        </p>
+        <h2>Plane spotting ‘date'</h2>
+        <img src="plane spotting.jpg" width="20%">
+        <p>
+            Ya this day is cute too because we made an impromptu plan to meet and it accidentally turned into a date😭. I clearly remember how I was guessing 
+            the model of the plane and somehow it was always correct??😭😭. Truth be told, even I was guessing and I wasn’t sure but my luck was working that 
+            day and I was able to guess everything correctly 😭😭😭😭
+        </p>
+        <p>
+            We’ve def had some crazy moments together and would love to create more memories with you.
+            <br>Once again, happiest birthday Prishu, I love you so fuckin much<3
+            <br>Love,
+            <br>Buttocks
+        </p>              
 </body>
 </html>
