--- a/wish.html
+++ b/wish.html
@@ -70,8 +70,7 @@
         <h2>Uncle’s 50th Birthday</h2>
         <img src="uncle's 50th birthday.jpg" width="40%">
         <p>
-            How can I ever forget this birthday cuz this is where it all started💀💀💀💀💀(ykwim). This was the first time I came to your house and is birthday 
-            ke baad hamara group bana tha where Roshit used to flirt with you and then I also started flirting 😭😭 but it was indeed a memorable day ngl.
+            This day is also memorable cuz we didn’t invite Vidhi💀 but most importantly we had A LOT of fun and we danced almost poori raat😭
         </p>
         <h2>Roshu’s 16th birthday</h2>
         <img src="roshu's birthday.jpg" width="40%">
@@ -112,7 +111,7 @@
         <img src="17th March.jpg" width="40%">
         <p>
             Yeah idc what you think but this was a date. But jokes aside, I still remember this day because it was so cute?? Riyaana asked if she could come 
-            with us and you stricly said NO😭😭😭. It was a perfect day from every possible way and I would love to go in past and live this day again.
+            with us and you stricly said NO😭😭😭. It was a perfect day in every possible way and I would love to go in past and live this day again.
         </p>
         <h2>Plane spotting ‘date'</h2>
         <img src="plane spotting.jpg" width="40%">
@@ -122,8 +121,9 @@
             day and I was able to guess everything correctly 😭😭😭😭
         </p>
         <p>
-            We’ve def had some crazy moments together and would love to create more memories with you.
-            <br>Once again, happiest birthday Prishu, I love you so fuckin much<3
+            We’ve def had some crazy moments together and I cherish all of them. Everyday and every moment we shared is special and I can't thank god enough for 
+            sending you in my life. it's gonna suck not having you around from next year but our friendship is way stronger than that.
+            <br>Once again, happiest birthday Prishu, from the bottom of my heart, I love you so fuckin much<3, so much that I can't imagine a day without you in it.
             <br>Love,
             <br>Buttocks
         </p>              
